kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: python-app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: python-app
  type: NodePort
